aplicação de fontawesome

--- a/o_que_mudou.html
+++ b/o_que_mudou.html
@@ -8,7 +8,8 @@
 	<meta name="description" content="" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 
@@ -110,26 +111,31 @@
             <br/><br/>
             <h1>Procedimentos Extra-Rol</h1>
             <p>​Além dos diversos procedimentos cobertos por lei, a SulAmérica oferece aos profissionais VALID coberturas adicionais, além das previstas em lei, e diversas vantagens.</p>      
-            <ul class="list_2">
+            <ul class="fa-ul list_2">
                 <li class="full">
+                    <i class="fa-li fa fa-circle"></i>
                     <strong>Transplantes</strong><br/>
                     (além dos cobertos por lei – rim, córnea e medula óssea) de coração,
                     pâncreas, pâncreas-rim, pulmão e fígado, incluindo as despesas
                     assistenciais com doador vivos
                 </li>
                 <li class="col">
+                    <i class="fa-li fa fa-circle"></i>
                     <strong>Escleroterapia</strong><br/>
                     (12 sessões/ano)
                 </li>
                 <li class="col">
+                    <i class="fa-li fa fa-circle"></i>
                     <strong>Fonoaudiologia</strong><br/>
                     (30 sessões/ano)
                 </li>
                 <li class="col">
+                    <i class="fa-li fa fa-circle"></i>
                     <strong>Psicomotricidade</strong><br/>
                     (30 sessões/ano)
                 </li>
                 <li class="col">
+                    <i class="fa-li fa fa-circle"></i>
                     <strong>RPG</strong><br/>
                     (15 sessões/ano)
                 </li>
@@ -144,12 +150,12 @@
             ​Todos os colaboradores serão incluídos automaticamente no novo plano. Para novas adesões, os dependentes serão incluídos 
             conforme elegibilidade abaixo:</p>
             
-            <ul class="list_2">
-                <li>Cônjuge ou Companheiro (a) com comprovação legal;</li>
-                <li>Filhos solteiros do segurado titular - naturais, adotivos ou enteados
+            <ul class="fa-ul list_2">
+                <li><i class="fa-li fa fa-circle"></i>Cônjuge ou Companheiro (a) com comprovação legal;</li>
+                <li><i class="fa-li fa fa-circle"></i>Filhos solteiros do segurado titular - naturais, adotivos ou enteados
                     menores de 21 anos (idade limite) ou até 24 anos
                     (se for universitário) (*);</li>
-                <li>Para filhos com necessidades especiais, não há limite de idade.
+                <li><i class="fa-li fa fa-circle"></i>Para filhos com necessidades especiais, não há limite de idade.
                     Basta que eles sejam dependentes da declaração de Imposto
                     de Renda (IR) do titular.</li>
             </ul>
