pagina de login

--- a/app.html
+++ b/app.html
@@ -93,7 +93,7 @@
     </div>
     <div class="content_right">
         <div class="box-image" style="background: url(img/img10.jpg) center no-repeat;">
-            
+            <a href="#" class="logo-box-image"><img src="img/logo_sulamerica_2.gif" alt="" /></a>
         </div>
         <div class="content_text content-download">
             <h1>Aplicativo Mobile</h1>
